--- a/user-service.properties
+++ b/user-service.properties
@@ -1,8 +1,26 @@
+ 
 #Server port
-server.port=8080
+server.port=8082
 
 #MongoDB Properties
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=connect-india
 spring.datasource.driver-class= mongodb.jdbc.MongoDriver
+
+ 
+
+
+
+#eureka server @magaj
+spring.cloud.compatibility-verifier.enabled=false
+eureka.client.serviceUrl.defaultZone=rhttp://localhost:8761/eureka
+eureka.client.instance.preferIpAddress=true
+spring.application.name=user-service
+management.endpoints.web.exposure.include=*
+
+#rabbitmq @maheshwari
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
