--- a/user-service.properties
+++ b/user-service.properties
@@ -9,7 +9,7 @@ spring.data.mongodb.database=connect-india
 spring.datasource.driver-class= mongodb.jdbc.MongoDriver
 
  
-
+spring.application.name=user-service
 
 
 #eureka server @magaj
