--- a/Hepdesk-service.properties
+++ b/Hepdesk-service.properties
@@ -1,4 +1,4 @@
-#db configuration
+ #db configuration
 spring.data.mongodb.uri= mongodb://localhost:27017/helpdesk
 server.port=8086
 
@@ -12,3 +12,12 @@ delete.message = "Ticket is successfully deleted";
 id.not.found.exception.message = "Given Ticket Id is not found in database";
 no.ticket.found.reporter = "No ticket is raised from you yet";
 no.ticket.found.assignee= "No tickets are assigned to you";
+ 
+
+
+#Eureka server -@magaj
+spring.cloud.compatibility-verifier.enabled=false
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.instance.preferIpAddress=true
+spring.application.name=helpdesk-service
+management.endpoints.web.exposure.include=*
