--- a/payment-service.properties
+++ b/payment-service.properties
@@ -1,3 +1,13 @@
-server.port=8001
+ server.port=8001
 server.context-path=/razorpayapp
 spring.thymeleaf.mode=LEGACYHTML5
+
+
+spring.cloud.config.uri=http://localhost:8888
+
+#eureka server @magaj
+spring.cloud.compatibility-verifier.enabled=false
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.instance.preferIpAddress=true
+spring.application.name=payment-service
+management.endpoints.web.exposure.include=*
