--- a/order-service.properties
+++ b/order-service.properties
@@ -1,1 +1,20 @@
-server.port=8086
+ server.port=8086
+ 
+ 
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=Order
+spring.data.mongodb.auto-index-creation=true
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+#constants
+delete.message="Deleted Successfully";
+resource.not.found.message="Resource Not Found With ID :"
+
+#eureka server @magaj
+spring.cloud.compatibility-verifier.enabled=false
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.instance.preferIpAddress=true
+spring.application.name=order-service
+management.endpoints.web.exposure.include=*
