--- a/authentication-service.properties
+++ b/authentication-service.properties
@@ -1,3 +1,26 @@
-server.port=8080
-spring.config.import=optional:configserver:
-spring.cloud.config.uri=http://localhost:8888
+ server.port=8082
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/authservice?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=password
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql= true
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.hibernate.ddl-auto=update
+
+#eureka server @magaj
+spring.cloud.compatibility-verifier.enabled=false
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.instance.preferIpAddress=true
+spring.application.name=authentication-service
+management.endpoints.web.exposure.include=*
+
+ 
+
+#rabbitmq @maheshwari
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=root
+spring.rabbitmq.password=root123
+ 
