--- a/user-service.properties
+++ b/user-service.properties
@@ -14,7 +14,7 @@ spring.application.name=user-service
 
 #eureka server @magaj
 spring.cloud.compatibility-verifier.enabled=false
-eureka.client.serviceUrl.defaultZone=rhttp://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.instance.preferIpAddress=true
 spring.application.name=user-service
 management.endpoints.web.exposure.include=*
